# B-Surf

./: CMakeLists.txt  Instructions_Fig3.txt  Permission.txt  README.md  Title_Atuhors_OS.txt
apps/: CMakeLists.txt
apps/splinegui/: CMakeLists.txt  app.cpp  playback.h  splinegui.cpp
apps/splinegui/flipout/: flipout.cpp  flipout.h
apps/splinegui/serialize/: readme.md  serialize.h
apps/splinegui/serialize/example/: build.sh  test.cpp
apps/splinegui/vector_heat/: vector_heat.cpp
apps/splinetest/: CMakeLists.txt  app.h  editing.h  scene_exporter.h  splinetest.cpp
apps/splinetest/flipout/: CMakeLists.txt
apps/splinetest/vector_heat/: CMakeLists.txt  vector_heat.h
libs/: CMakeLists.txt
libs/VTP/: geodesic_algorithm_base.h  geodesic_algorithm_exact.h  geodesic_algorithm_exact_elements.h  geodesic_constants_and_simple_functions.h  geodesic_memory.h  geodesic_mesh.h  geodesic_mesh_elements.h  main.cpp  stdafx.h
libs/flipout/src/: main.cpp
libs/realtime/: CMakeLists.txt  gpu.cpp  gpu.h  gui.cpp  gui.h  window.cpp  window.h
libs/realtime/ext/graphics/: .gitignore  CMakeLists.txt  readme.md  update.sh
libs/realtime/ext/graphics/graphics/: bvh.cpp  bvh.h  common.h  commonio.h  geometry.cpp  geometry.h  image.cpp  image.h  math.h  modelio.cpp  modelio.h
libs/realtime/ext/graphics/scripts/: build.py
libs/realtime/ext/imgui/: imgui.cpp
libs/splinesurf/: CMakeLists.txt  karcher.cpp  karcher.h  logging.h  spline.cpp  spline.h  splineio.cpp  splineio.h  stl_reader.h  strip.h
libs/splinesurf/unused/: dual.h  timer.h
libs/yocto/: yocto_commonio.cpp  yocto_commonio.h  yocto_mesh.cpp  yocto_mesh.h  yocto_shape.cpp  yocto_shape.h
libs/yocto_gui/: CMakeLists.txt  yocto_imgui.cpp  yocto_imgui.h  yocto_opengl.cpp  yocto_opengl.h  yocto_shade.cpp  yocto_shade.h  yocto_window.cpp  yocto_window.h
shaders/: flat.frag  flat.vert  lines.vert  mesh.frag  mesh.vert  points.frag  points.vert  points_color.frag  points_color.vert  polyline-envlight.frag  polyline-eyelight.frag  polyline.frag  polyline.vert  quad.vert  sphere-envlight.frag  sphere-eyelight.frag  sphere.frag  sphere.vert
tests/: loop-bunny.json
